# Neuro-X

./: Makefile  README.md  pyproject.toml
neurox/: DEMO_RUNNING_GUIDE.md  PREVIEW_CHECK.md  WORKING_DEMO.md  app.js  index.html  styles.css
neurox/components/: ai-chat.js  dashboard.js  navbar.js  reminders.js
neurox/forum/: forum.js
neurox/games/: focus-game.js  memory-game.js  pattern-game.js  small-match-game.js  small-tap-game.js
neurox/unity_therapy/: README.md
neurox/unity_therapy/Scripts/: BreathingOrbController.cs  CalmAffirmationBoard.cs  GazeFocusTarget.cs  TherapySessionManager.cs
src/neurox/: __init__.py  demo.py  engine.py
tests/: test_engine.py
